# toMD

./: .gitignore  Iniciar_Conversor.vbs  LICENSE.md  README.md  converter.py  converter_gui.py  installer.iss  pyproject.toml  run.py  testar_docling.py  to.MD.spec
.github/workflows/: release.yml  test.yml
docs/superpowers/plans/: 2026-07-13-tomd-v1.1.md
docs/superpowers/specs/: 2026-07-13-tomd-v1.1-design.md
tests/: conftest.py  test_engine.py  test_errors.py  test_formats.py  test_logs.py  test_updates.py  test_version.py  test_web.py
tomd/: __init__.py  app.py  engine.py  errors.py  formats.py  logs.py  theme.py  ui.py  updates.py  version.py  web.py
